--- a/src/index.css
+++ b/src/index.css
@@ -160,6 +160,18 @@ p {
   box-shadow: var(--dark-shadow);
 }
 
+@media screen and (min-width: 576px) and (max-width: 985px) {
+  .section-center {
+    display: grid;
+    grid-template-columns: auto 60% auto;
+    grid-template-rows: auto;
+  }
+
+  .container {
+    grid-area: 1 / 2 / 2 / 3;
+  }
+}
+
 .holiday-info {
   background-color: var(--soft-dark);
   padding: 1rem;
